<?xml version="1.0"?>
<package format="2">
	<name>aruco_eye</name>
	<version>1.0.0</version>
	<description>
  		This package is aruco_eye.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/aruco_eye</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>aruco_lib</exec_depend>
  <exec_depend>aruco_eye_core</exec_depend>
  <exec_depend>aruco_eye_ros</exec_depend>

 <export>
   <metapackage />
 </export>

</package>

