<package>
	<name>aruco_eye_msgs</name>
	<version>1.0.0</version>
	<description>
    		This package is aruco_eye_msgs.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/aruco_eye_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>


  <export></export>
</package>


