<?xml version="1.0"?>
<package format="2">
	<name>aruco_eye_msgs</name>
	<version>1.0.0</version>
	<description>
    		This package is aruco_eye_msgs.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/aruco_eye_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>


  <exec_depend>message_runtime</exec_depend>



  <export></export>
</package>


