<?xml version="1.0"?>
<package format="2">
	<name>aruco_eye_ros</name>
	<version>1.0.0</version>
	<description>
  		This package is aruco_eye_ros.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/aruco_eye_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>message_filters</depend>
	<depend>image_transport</depend>
	<depend>cv_bridge</depend>
  	<depend>geometry_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_geometry_msgs</depend>
  	<depend>tf2_ros</depend>
	<depend>perception_msgs</depend>
	<depend>robot_component_srvs</depend>
	<depend>aruco_eye_core</depend>

</package>

