<?xml version="1.0"?>
<package>
	<name>aruco_lib</name>
	<version>1.0.0</version>
	<description>
    		This package is aruco_lib.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/aruco_lib</url>

  	<buildtool_depend>catkin</buildtool_depend>

  
</package>


